# enterprise-ai-knowledge-assistant

./: .gitignore  AGENT.md  README.md  ROADMAP.md  run.ps1
.github/: Flow.md
.github/workflows/: ci.yml  deploy-aws.yml  deploy-gcp.yml  security-scan.yml  (+1 more)
UIUX/: README.md  index.html
backend/: .env.aws.example  .env.example  .env.gcp.example  .env.local.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/: routes.py
backend/app/auth/: rbac.py
backend/app/cache/: __init__.py  retrieval_cache.py  semantic_cache.py
backend/app/core/: config.py
backend/app/cost/: tracker.py
backend/app/db/: models.py  session.py
backend/app/embeddings/: __init__.py  base.py  cloud_placeholders.py  factory.py  huggingface_provider.py  mock_provider.py
backend/app/evaluation/: golden_runner.py  service.py
backend/app/ingestion/: chunking.py  file_parsing.py  folder_scan.py  jobs.py  metadata.py  normalization.py  service.py  synthetic.py
backend/app/llm/: base.py  cloud_placeholders.py  factory.py  mock_provider.py  openai_compatible_provider.py  openai_mock_provider.py  openai_prompt.py  openai_provider.py
backend/app/observability/: logging.py
backend/app/repositories/: __init__.py  conversations.py  costs.py  documents.py  evaluations.py  feedback.py  prompts.py
backend/app/reranking/: __init__.py  base.py  factory.py  sentence_transformers_provider.py
backend/app/retrieval/: service.py
backend/app/routing/: model_router.py
backend/app/schemas/: admin.py  chat.py  conversations.py  documents.py  evaluation.py  feedback.py  prompts.py  retrieval.py
backend/app/security/: guardrails.py
backend/app/storage/: __init__.py  base.py  factory.py  gcs_provider.py  local_provider.py  s3_provider.py
backend/data/evaluation/: golden_questions.json
backend/tests/: conftest.py  test_admin_endpoints.py  test_chat_flow.py  test_embeddings_and_jobs.py  test_file_ingestion.py  test_ingestion_synthetic.py  test_llm_providers.py  test_reranking.py  test_semantic_cache.py  test_vector_retrieval.py
docs/: architecture.md  cheapest-mid-size-enterprise-deployment.md  ci-cd-plan.md  cloud-architecture.md  cloud-cost-comparison.md  deployment-compatibility-strategy.md  interview-explanation.md  roadmap.md  tradeoffs.md  user-guide.md  whiteboard.md
frontend/: .env.aws.example  .env.gcp.example  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
infra/: docker-compose.yml
(+61 files in other folders)
