[project]
name = "enterprise-ai-knowledge-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for a secure enterprise RAG knowledge assistant."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic>=2.10.4,<3",
    "pydantic-settings>=2.7.1,<3",
    "python-json-logger==3.2.1",
    "SQLAlchemy==2.0.36",
    "psycopg[binary]>=3.2.10,<4",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
